<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TeacherMain"
    android:padding="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="5dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="14dp">

        <RelativeLayout
            android:id="@+id/teacher_head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/theme8_spacing_standard_new"
            tools:ignore="MissingConstraints">

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/person_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="15dp"
                android:padding="1dp"
                android:src="@drawable/theme8_ic_profile" />

            <TextView
                android:id="@+id/personal_name"
                style="@style/T8HeadingBig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="31dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@id/person_image"
                android:text="AAAAA" />// need to show the name you register

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/personal_name"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@id/person_image">

                <ImageView
                    android:id="@+id/ivMedal1"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/bg_button"
                    android:backgroundTint="@color/primary_color"
                    android:paddingTop="@dimen/theme8_spacing_control_half"
                    android:paddingBottom="@dimen/theme8_spacing_standard"
                    android:src="@drawable/theme8_ic_medal" />

                <ImageView
                    android:id="@+id/ivMedal2"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/bg_button"
                    android:backgroundTint="@color/primary_color"
                    android:padding="@dimen/theme8_spacing_medium"
                    android:paddingTop="@dimen/theme8_spacing_control_half"
                    android:src="@drawable/theme8_ic_crown" />

                <ImageView
                    android:id="@+id/ivMedal3"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_heigth="30dp"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/bg_button"
                    android:backgroundTint="@color/primary_color"
                    android:padding="@dimen/theme8_spacing_medium"
                    android:paddingTop="@dimen/theme8_spacing_control_half"
                    android:src="@drawable/theme8_ic_cup" />

                <ImageView
                    android:id="@+id/ivMedal4"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_heigth="30dp"
                    android:layout_marginStart="15dp"
                    android:background="@drawable/bg_button"
                    android:backgroundTint="@color/primary_color"
                    android:padding="@dimen/theme8_spacing_medium"
                    android:paddingTop="@dimen/theme8_spacing_control_half"
                    android:src="@drawable/theme8_ic_flag" />
            </LinearLayout>


        </RelativeLayout>

        <TextView
            android:id="@+id/tvGeneral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/teacher_head"
            android:layout_marginStart="@dimen/theme8_spacing_standard_new"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/theme8_font_size_large"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="General"
            android:textAllCaps="true"
            android:textAppearance="@style/Title"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/llGeneral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvGeneral"
            android:layout_marginTop="@dimen/theme8_spacing_middle"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/llFavourites"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/theme8_spacing_middle"
                android:layout_marginTop="@dimen/theme8_spacing_control">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/white"
                    android:padding="10dp"
                    android:src="@drawable/theme8_ic_pencil_scale" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_add_course"
                    style="@style/ButtonGreen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/teacher_add_course"
                    app:layout_constraintBottom_toTopOf="@+id/tvGeneral"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="@dimen/theme8_spacing_standard_new"
                android:background="@color/white" />

            <LinearLayout
                android:id="@+id/manage_all_course"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/theme8_spacing_middle">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/white"
                    android:padding="10dp"
                    android:src="@drawable/theme8_ic_bag" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_manage_all_course"
                    style="@style/ButtonGreen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/teacher_manage_all_course"
                    app:layout_constraintBottom_toTopOf="@+id/btn_add_course"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="@dimen/theme8_spacing_standard_new"
                android:background="@color/white" />

<!--            <LinearLayout-->
<!--                android:id="@+id/all_activities"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="@dimen/theme8_spacing_middle"-->
<!--                android:layout_marginBottom="@dimen/theme8_spacing_control">-->

<!--                <ImageView-->
<!--                    android:layout_width="40dp"-->
<!--                    android:layout_height="48dp"-->
<!--                    android:layout_marginTop="20dp"-->
<!--                    android:background="@color/white"-->
<!--                    android:padding="10dp"-->
<!--                    android:src="@drawable/theme8_ic_crome" />-->

<!--                <androidx.appcompat.widget.AppCompatButton-->
<!--                    android:id="@+id/btn_all_activities"-->
<!--                    style="@style/ButtonGreen"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginTop="20dp"-->
<!--                    android:layout_marginBottom="15dp"-->
<!--                    android:text="@string/teacher_all_activities"-->
<!--                    app:layout_constraintBottom_toTopOf="@+id/btn_manage_all_course"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintStart_toStartOf="parent" />-->
<!--            </LinearLayout>-->
        </LinearLayout>

        <TextView
            android:id="@+id/tvSettings"
            style="@style/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/llGeneral"
            android:layout_marginStart="@dimen/theme8_spacing_standard_new"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="@dimen/theme8_font_size_large"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="SETTING"
            android:textAllCaps="true"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvSettings"
            android:layout_marginTop="@dimen/theme8_spacing_middle"
            android:layout_marginBottom="@dimen/theme8_spacing_xxxlarge"
            android:background="@color/white"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/theme8_spacing_middle"
                android:layout_marginTop="@dimen/theme8_spacing_control">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/white"
                    android:padding="10dp"
                    android:src="@drawable/theme8_ic_key" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_edit_login_detail"
                    style="@style/ButtonGreen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/teacher_login_detail"
                    app:layout_constraintBottom_toTopOf="@+id/tvSettings"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="@dimen/theme8_spacing_standard_new"
                android:background="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/theme8_spacing_middle"
                android:layout_marginBottom="@dimen/theme8_spacing_control">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/white"
                    android:padding="10dp"
                    android:src="@drawable/theme8_ic_block" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_logout"
                    style="@style/ButtonGreen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/teacher_logout"
                    app:layout_constraintBottom_toTopOf="@+id/btn_edit_login_detail"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
            </LinearLayout>

        </LinearLayout>



    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>